; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/vmcs_host/extr_vc_vchi_filesys.c_fs_host_direntbytestream_interp.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/vmcs_host/extr_vc_vchi_filesys.c_fs_host_direntbytestream_interp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i8*, i8*, i8*, i32 }

@D_NAME_MAX_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dirent*, i8*)* @fs_host_direntbytestream_interp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fs_host_direntbytestream_interp(%struct.dirent* %0, i8* %1) #0 {
  %3 = alloca %struct.dirent*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  store %struct.dirent* %0, %struct.dirent** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  store i8* %6, i8** %5, align 8
  %7 = load %struct.dirent*, %struct.dirent** %3, align 8
  %8 = getelementptr inbounds %struct.dirent, %struct.dirent* %7, i32 0, i32 3
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* @D_NAME_MAX_SIZE, align 4
  %11 = call i32 @memcpy(i32* %8, i8* %9, i32 %10)
  %12 = load i32, i32* @D_NAME_MAX_SIZE, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = sext i32 %12 to i64
  %15 = getelementptr inbounds i8, i8* %13, i64 %14
  store i8* %15, i8** %5, align 8
  %16 = load %struct.dirent*, %struct.dirent** %3, align 8
  %17 = getelementptr inbounds %struct.dirent, %struct.dirent* %16, i32 0, i32 2
  %18 = bitcast i8** %17 to i8*
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @read_bytestream(i8* %18, i8* %19, i32 8)
  %21 = load %struct.dirent*, %struct.dirent** %3, align 8
  %22 = getelementptr inbounds %struct.dirent, %struct.dirent* %21, i32 0, i32 2
  %23 = load i8*, i8** %22, align 8
  %24 = call i8* @VC_VTOH32(i8* %23)
  %25 = load %struct.dirent*, %struct.dirent** %3, align 8
  %26 = getelementptr inbounds %struct.dirent, %struct.dirent* %25, i32 0, i32 2
  store i8* %24, i8** %26, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 4
  store i8* %28, i8** %5, align 8
  %29 = load %struct.dirent*, %struct.dirent** %3, align 8
  %30 = getelementptr inbounds %struct.dirent, %struct.dirent* %29, i32 0, i32 1
  %31 = bitcast i8** %30 to i8*
  %32 = load i8*, i8** %5, align 8
  %33 = call i32 @read_bytestream(i8* %31, i8* %32, i32 8)
  %34 = load %struct.dirent*, %struct.dirent** %3, align 8
  %35 = getelementptr inbounds %struct.dirent, %struct.dirent* %34, i32 0, i32 1
  %36 = load i8*, i8** %35, align 8
  %37 = call i8* @VC_VTOH32(i8* %36)
  %38 = load %struct.dirent*, %struct.dirent** %3, align 8
  %39 = getelementptr inbounds %struct.dirent, %struct.dirent* %38, i32 0, i32 1
  store i8* %37, i8** %39, align 8
  %40 = load i8*, i8** %5, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 4
  store i8* %41, i8** %5, align 8
  %42 = load %struct.dirent*, %struct.dirent** %3, align 8
  %43 = getelementptr inbounds %struct.dirent, %struct.dirent* %42, i32 0, i32 0
  %44 = bitcast i8** %43 to i8*
  %45 = load i8*, i8** %5, align 8
  %46 = call i32 @read_bytestream(i8* %44, i8* %45, i32 8)
  %47 = load %struct.dirent*, %struct.dirent** %3, align 8
  %48 = getelementptr inbounds %struct.dirent, %struct.dirent* %47, i32 0, i32 0
  %49 = load i8*, i8** %48, align 8
  %50 = call i8* @VC_VTOH32(i8* %49)
  %51 = load %struct.dirent*, %struct.dirent** %3, align 8
  %52 = getelementptr inbounds %struct.dirent, %struct.dirent* %51, i32 0, i32 0
  store i8* %50, i8** %52, align 8
  ret void
}

declare dso_local i32 @memcpy(i32*, i8*, i32) #1

declare dso_local i32 @read_bytestream(i8*, i8*, i32) #1

declare dso_local i8* @VC_VTOH32(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
